# rust-archext-web

./: .gitignore  Dockerfile  README.md  cronjobs  docker-compose.yml
.github/workflows/: docker-image.yml
extractor/: Cargo.toml  Dockerfile
extractor/src/: extract.rs  main.rs
nginx/: nginx.conf
src/: extract.rs  main.rs
webserver-rocket/: Cargo.toml  Dockerfile  Rocket.toml
webserver-rocket/src/: main.rs
webserver-rocket/static/: upload-progress.js
webserver-rocket/templates/: index.html.tera  success.html.tera
