[package]
name = "log-preperation"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
futures = "0.3.30"
env_logger = "0.11.3"
log = "0.4.22"
chrono = "0.4.38"
glob = "0.3.1"
zip = "2.1.3"
